# cpp-documentation-example

./: .gitignore  CMakeLists.txt  README.md  _CMakeLists.txt  activate.bat  activate.sh  requirements.txt
CatCutifier/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in  _CMakeLists.txt  conf.py  index.rst  make.bat  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: placeholder.txt
include/animals/: animals.h
pspg_cpptpt/: CMakeLists.txt  _CMakeLists.txt  pspg_cpptpt.cpp  pspg_cpptpt.h
software/: CMakeLists.txt
software/app/: CMakeLists.txt  Name.cpp  Name.h  a.cpp  a.h  app.cpp  b.cpp  b.h  main.cpp  my_app.cpp  my_app.h
software/test/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt
src/cat/: CMakeLists.txt
src/cat/cat_cutifier/: CatCutifier.cpp  CatCutifier.h
src/cat/cat_cutifier/internal/: CatInternalHeader.h
src/dog/: CMakeLists.txt
src/dog/dog_ugliflier/: CMakeLists.txt  DogUglifier.cpp  DogUglifier.h
